--- a/public/css/custome.css
+++ b/public/css/custome.css
@@ -21,3 +21,18 @@
  overflow-y:scroll;
  height:510px;
 }
+.floatright{
+    float: right;
+}
+
+.fileUpload input[type=file]{
+    display:none;
+}
+.btn{
+    background-color:#1ab394;
+    color:#FFFFFF;
+    border:1px solid #1ab394;;
+    border-radius:3px;
+    padding:6px 12px;
+    font-size:16px;
+}
